# ChangeLog for app-i18n/man-pages-ru
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-ru/ChangeLog,v 1.14 2013/01/14 17:54:46 pinkbyte Exp $

  14 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Add myself as maintainer

*man-pages-ru-3.41.2145.1724.20130102 (14 Jan 2013)

  14 Jan 2013; Sergey Popov <pinkbyte@gentoo.org>
  +man-pages-ru-3.41.2145.1724.20130102.ebuild:
  Version bump, wrt bug #451676. Thanks to Vladimir <blueboar2 AT gmail.com>
  for discovering this issue

  27 Sep 2011; Alexey Shvetsov <alexxy@gentoo.org>
  man-pages-ru-3.27.2066.1435.20101003.ebuild:
  Add ~x86-linux

  02 Jul 2011; Alexey Shvetsov <alexxy@gentoo.org>
  man-pages-ru-3.27.2066.1435.20101003.ebuild:
  Add ~amd64-linux keyword

  24 Jan 2011; Jeroen Roovers <jer@gentoo.org>
  man-pages-ru-3.27.2066.1435.20101003.ebuild:
  Stable for HPPA PPC (bug #349381).

  09 Jan 2011; Raúl Porcel <armin76@gentoo.org>
  man-pages-ru-3.27.2066.1435.20101003.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #349381

  05 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  man-pages-ru-3.27.2066.1435.20101003.ebuild:
  Stable on amd64 wrt bug #349381

  31 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  man-pages-ru-3.27.2066.1435.20101003.ebuild:
  x86 stable wrt bug #349381

  29 Dec 2010; Markus Meier <maekke@gentoo.org>
  man-pages-ru-3.27.2066.1435.20101003.ebuild:
  arm stable, bug #349381

  29 Dec 2010; Brent Baude <ranger@gentoo.org>
  man-pages-ru-3.27.2066.1435.20101003.ebuild:
  stable ppc64, bug 349381

*man-pages-ru-3.27.2066.1435.20101003 (14 Oct 2010)

  14 Oct 2010; Peter Volkov <pva@gentoo.org>
  +man-pages-ru-3.27.2066.1435.20101003.ebuild:
  Version bump, thank Azamat H. Hackimov for report in bug #339690.

*man-pages-ru-3.24.2059.1262.20100523 (24 May 2010)

  24 May 2010; Peter Volkov <pva@gentoo.org> man-pages-ru-0.98.ebuild,
  +man-pages-ru-3.24.2059.1262.20100523.ebuild: