@@ -1,10 +1,20 @@
-DIST man-pages-ru_3.24-2059-1262-20100523.tar.bz2 198613 SHA256 dbeb43548b0578bc291e68da082d04952c1b2b0a854595e1b2442801c325c096 SHA512 e851ab5f42b59a06f32b9230b5c7efddf5b311da0b9d3f9b4a0ff5e4120ad593f0e8d6ff07faf1af7c0b4191c66eb22666fb10ee8ec7a354c30ba538020c1171 WHIRLPOOL b523ab00f752f430780bf6ef639a2e87b75991a18ef22502aad6ec4a965bddee79fdee70938469c06118dbd3a4f5796db96bb7918c1156814c93cb411f8c6c05
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST man-pages-ru_3.27-2066-1435-20101003.tar.bz2 377019 SHA256 b6d5cebf506ea7e100f5c0f1e66c17f13cb61e42d6214cc5a7489a43da3c593b SHA512 9df89207a335488fa15a746171a922bb93480463ffc1dbe9d0997f218d0f8dcab3ee713e6e6ce80d9eb2da99e256f031c0506d6e0da97ef23a03352eff65e551 WHIRLPOOL e28e5af2b5d492cc9091f82ec6b8392fe9dbc6cd4d5ebbe53f474f46536267495777d507ddcb7a56da6e9a5540524359d28bfbf6bc5123f1afd29989d2f4f10f
 DIST man-pages-ru_3.41-2145-1724-20130102.tar.bz2 669902 SHA256 23e76ba0025616b3670716363227440e6fdda17bd8498be5beb565561b25f8ba SHA512 1bc37cbea0ee559985f2ded4dec136e5b178db26d25d571fe9fbf10f611d91be65d08973b5d9a2db1e80aa1da3f0b54ae6a28a8b6d63ac0c559f606e4779e403 WHIRLPOOL ea224a6182c1de420a75e5a851bae9ddf3522ed14a053d9ad835fb156301410bb392c704273a205421ab50bd27f264dcc2da9c95fb4ad1889e6fb708a1cd8845
-DIST manpages-ru-0.98.tar.bz2 233762 SHA256 d52a57775fa031d0ec78dcddbf5faebcc65c9bd4051ba79e624b465d49dacd79 SHA512 fa0a0d266d2ad1d9eed81de501cc52f3654715f453d459b4e73af227cef4ea5f9652e7abb6d1c753223be57068a7ebbcb429033b5896e646e9cd217d403a2a2c WHIRLPOOL b70d1c779f55773e0bc0e1a001b7af28cfc08c1c0e5853b7fa7cc0cc019bff7cc3d73d8a97842f68f195cf5a8394bb334a4b2b28646723be467ac4b800c54b63
-EBUILD man-pages-ru-0.98.ebuild 711 SHA256 72cd8d883e0271e757bf054aff356a50009f746558e01393b426bbfa525c98d7 SHA512 63b9ba7088dcb865ad605dc89a21fc70ea6d75885b2e931dade0da7888c785175dd41ba9c905722b2a2414f4ba1749972840480f58921b920ccc5ad54cac45ff WHIRLPOOL 7c9579e220bc882f70775275627e3725fe110ee65d6ed59200cddba45eea91921e546060ac48803442130fdbaf0171df2578cf99f345b335577c8054825339df
-EBUILD man-pages-ru-3.24.2059.1262.20100523.ebuild 815 SHA256 8a34c327ca81af78fbf8b9296a2e16e50ab3bfc3a3e60fe415ff7db383c51c0e SHA512 e896f1d13839ae7431fa848654f8aed2f4220b340424759a56afac70f496219503886ab8c6e7104427a56260856914ac411d6b396c5a576b2abbb2a22e76029e WHIRLPOOL c2d388e19ccc599f240170fc2dddcce300af52fdedaeb94b1829330e3cdf5ba3ac3bec8e3c28433fb8d01746963ccd907a7b5ff2c622c4f91d745625cfa44aa3
 EBUILD man-pages-ru-3.27.2066.1435.20101003.ebuild 830 SHA256 4c2988645826cd2a20b1851cbdb67348fae09a7cdd2686ee122bd4052b18d61e SHA512 da69223c477e3bc34237dbafa35f96896c314f9acde38eb0dbff7923460e8bf0cda815fdb3a5710916a5e0f34a50295738762a40c1a11ffdc2b9978d7f78b94b WHIRLPOOL a66c12e38a66cf49375485a3806fbe20d8516a682405ce30ac537ecc82d3a8eeea78de63d7811b166d4a183de40380764ceaa2d9713dfe1d64ff7ce024e05a23
 EBUILD man-pages-ru-3.41.2145.1724.20130102.ebuild 827 SHA256 4ef1edade8ff0e08dd60dc4a758ccd9d74b0fe91045423c22acbbc8a6ea13e9d SHA512 d45243328dcc6acbc0672dbebf86eea11c7b35d10931f71a76954f07c8fc2e772581b45dd7d6bb3f9ac6db68c6e238ebc5767b08903f799b7d3ea27d63a656ac WHIRLPOOL 579458997f2bfe894396614ca84e5a73c8379d3e17e1eab9adb7a6d25c1b25f4e771101f911f17cdb7a41293a8e14f9f51e54298bba720314e59f19c6357b017
-MISC ChangeLog 2460 SHA256 9de3736ab30dd48dbbf9bce4589abc55c6b6efab2f799c45fd3671d1865adc9b SHA512 3e4f59567d387a79cb8d5326d6176297f75b0532115cb1d1e7f90733b6e7cd7c29807a35447560779be65cc41a1c743a188a8a3942af6235a7df7da75f2d0f66 WHIRLPOOL f273804286f94d8c76d6c313f9a05f0cb1af55ead193ca4972dda89ca166c9e0f3aae17beb6daa7b91d626c4b81c4a5de5aa301cc3cda2233b54fb0a754d1fc5
+MISC ChangeLog 2606 SHA256 b0c63fbf838e5dd31ab0b43535630947d9b365c8aa6add81d25e715cd568bf1c SHA512 c1059a9d491cbf3bbca6faf8298595c7484409138045bbe7dc26a1e64b38e6b6ea4c61c66e7c4cff9b2219b4c904bef2d3145d9dbc1c9b473bcf14da12020d82 WHIRLPOOL c62ac5b1f40553f832e810db327f4c329ebf7a98f61a8debbf635982e7614af7d4e7d5c02c9e01ca4b884ff12f13bac14b8fd571f029c2100690e6953a49954d
 MISC metadata.xml 322 SHA256 02c0bc6309a35d55003ff16a275f06fe6b4e18ffe9f425ba7f791c2ce48466f8 SHA512 f3b9189925015f1b9902358c6aba4d74c27f0c8d5f4b131ab7d000da102e0f41304ed9df1395c6e45c2170d14240122cbcd100357f789e273ef0dbebbc238309 WHIRLPOOL 0e986b26bce1b3c4493cc01536ce9278f6fb3e78cb72a973773a3c9c0e8d0dbb5d3d96c3625d1e0a2729be00176ad761cda2a2992f5ac169634e0bf484994790
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJRHOn5AAoJECo/aRed9267yG8H/18yqp4vL6UtWolPM/zZVuN8
+3VCdhcakt0+y7FnTRRoRxikc663H9KSasfLEriinLfG9C4bZJczHmEZcITHGnvZP
+qUIuQifPJqL3I52nBUV082kAtuy4G/w47s3exRJaPKEIVCBgFgaHZ7KPfRrta+yY
+RmG4XW8FCRaD7DG69B6Ezys+f63sm2HtX8aQlD0GXYcS9/h0yM8Km/27+x1ihxCA
+g9o8qhSGCyXZbQe3HlcCHX42BuZ92mQud3PfKt58VqRNU+biPGTAUB/brcu1MH5r
+IIi4PIfRt7++ngIkhQ3Al5T1jLGf2R2jERPUW7faMxIUvZ9D185Z0YQkKnIvstY=
+=CByx
+-----END PGP SIGNATURE-----
