@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/man-pages-ru
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-ru/ChangeLog,v 1.14 2013/01/14 17:54:46 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-ru/ChangeLog,v 1.15 2013/02/14 13:43:20 pinkbyte Exp $
+
+  14 Feb 2013; Sergey Popov <pinkbyte@gentoo.org> -man-pages-ru-0.98.ebuild,
+  -man-pages-ru-3.24.2059.1262.20100523.ebuild:
+  Drop old versions
 
   14 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
   Add myself as maintainer
